kubernetes/apps/flux-addons/addons/app/webhooks/github/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 404"
spec:
  hostnames: ["flux-webhook.lumu.au"]
  parentRefs:
    - name: external
      namespace: flux-system
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
